Adding benchmark test for TPCE trade (disabled)
Has only two columns from TPCE trade schema to enable loading as many rows as possible
for local testing on the two columns SYM and BID.

Minor changes to ColumnCacheBenchmark and disabled JVM parameters in build.gradle to be
used for actual benchmarks.